projects/vb6parse/snapshots/parsers/cst/type_definitions/type_statements/type_with_array_element.snap
---
source: projects/vb6parse/tests/type_definitions/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: SalesData
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: SalesPersonID
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: MonthlySales
            - kind: LeftParenthesis
              text: (
            - kind: IntegerLiteral
              text: "1"
            - kind: Whitespace
              text: " "
            - kind: ToKeyword
              text: To
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "12"
            - kind: RightParenthesis
              text: )
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: CurrencyKeyword
              text: Currency
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
