projects/vb6parse/snapshots/parsers/cst/type_definitions/type_statements/type_with_byte_array.snap
---
source: projects/vb6parse/tests/type_definitions/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: BinaryData
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: Buffer
            - kind: LeftParenthesis
              text: (
            - kind: IntegerLiteral
              text: "0"
            - kind: Whitespace
              text: " "
            - kind: ToKeyword
              text: To
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "255"
            - kind: RightParenthesis
              text: )
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: ByteKeyword
              text: Byte
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: Length
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: IntegerKeyword
              text: Integer
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
