projects/vb6parse/snapshots/parsers/cst/type_definitions/type_statements/type_with_fixed_length_string.snap
---
source: projects/vb6parse/tests/type_definitions/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CustomerRecord
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: CustomerID
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: CustomerName
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: Whitespace
              text: " "
            - kind: MultiplicationOperator
              text: "*"
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "50"
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: Address
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: Whitespace
              text: " "
            - kind: MultiplicationOperator
              text: "*"
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "100"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
